@@ -117,7 +117,7 @@ public class IntVector {
         int oldValue = data[index];
         
         int numMoved = elt - index - 1;
-        Integer n = new Integer(elt);
+        Integer n = Integer.valueOf(elt);
         if (numMoved > 0)
             System.arraycopy(n, index+1, n, index,numMoved);
         elt = n.intValue();
